--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        background-color: navy;
+      }
+    </style>
   </head>
   <body class="modal-open">
     <!-- <div class="container">
