--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     />
     <style>
       body {
-        background-color: navy;
+        background-color: darkred;
       }
     </style>
   </head>
